Modified: Functional Search has been implemented. Older Navbar Search has been removed